Измененено визуальное отображение выпадающего меню

--- a/menu/apps/menu/templates/menu/main.html
+++ b/menu/apps/menu/templates/menu/main.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 
-{{ target_code }}
-
-{{ menu }}
+{% for i in menu %}
+    {% include 'menu/components/menu_line.html' with menu=i %}
+{% endfor %}
 
 </body>
 </html>
